src/assets/main.css
/* ... */
 .notify-item:hover {
 	opacity: 0.8;
 	box-shadow: 0 0 10px 0 #0f0f0f;
 }

 .notify-item>p {
 	margin: 10px;
 	opacity: 0.8;
 	text-align: center;
 }

 .notify-item.info {
 	background-color: rgba(0, 102, 204, 1);
 }

 .notify-item.success {
 	background-color: rgba(23, 23, 23, 0.9);
 }

 .notify-item.error {
 	background-color: #e80801;
 	color: #fff;
 }

 .notify-title {
 	font-weight: 700;
 } */

/**
WRAPPERS


 .wrapper {
 	margin: 0;
 	padding: 0;
 	display: flex;
 	flex-flow: row;
 	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
 }

 .wrapper.loadingRemote {
 	filter: blur(8px);
 	-webkit-filter: blur(8px);
 }

 .d-flex.align-items-center.col-12.position-absolute.h-100 {
 	z-index: 9999;
 }

 .spinner-grow {
 	margin-left: 30px;
 	height: 10rem;
 	width: 10rem;
 }

 @media all and (max-width: 640px) {
 	.wrapper {
 		overflow: auto;
 		flex-flow: column;
 	}
 }

 */

/**
 EDITOR
*/

.info-icon-wrapper {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 4;
  background: transparent;
  border: none;
  padding: 0;
}

.info-icon {
  cursor: pointer;
  width: 16px;
  height: 16px;
}

.description-label {
  font-weight: normal;
  font-size: 0.875rem;
  color: hsl(0, 0%, 10%);
  padding: 0 0.5rem;
}

.editor-features .list-group-item {
  padding: 0.5em 0 0.5em 0.5em;
  background-color: transparent;
}

.editor-features .list-group-item .btn-icon {
  padding: 0;
}

.editor-contacts .btn-icon {
  padding: 0;
}

.editor-contacts table tbody tr td:last-of-type {
  padding-right: 0;
}

.editor-radio .form-check [type="radio"] + label {
  font-size: 1rem;
  font-weight: normal;
}

.editor-boolean .form-check [type="radio"] + label {
  font-size: 0.875rem;
  font-weight: normal;
  padding-top: 0.25rem;
}

/**
HEAD
*/
.head-wrapper .container-xxl {
  max-width: none;
}

/**
	CONTENT
*/
.content__head {
  width: 100%;
  height: auto;
}

.content__head__title {
  color: #374151;
  font-family: "Noto Sans", sans-serif;
  font-size: 2rem;
  font-weight: bold;
  letter-spacing: -0.33px;
  line-height: 40px;
}

.content__head__help {
  margin: 10px 20px 0;
  height: 40px;
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  justify-content: space-between;
  text-align: right;
}

.content__head__help a {
  text-align: right;
  color: #6B7280;
  font-family: "Noto Sans", sans-serif;
  font-size: 16px;
  font-weight: bold;
  line-height: 24px;
  padding-left: 2rem;
}

.content__head__status {
  align-self: flex-end;
  color: #D1D5DB;
  font-family: "Noto Sans", sans-serif;
  font-size: 12px;
  font-weight: 300;
  line-height: 16px;
  text-align: right;
}

.content__wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 152px);
}

@media all and (max-width: 992px) {
  .content__wrapper {
    height: calc(100vh - 98px);
  }
}

.content__editor-wrapper {
  display: flex;
  flex-direction: column;
  height: auto;
  flex: 1;
  overflow: auto;
}

.content__main {
  width: 100%;
  /* background-color: #32F4356; */
  padding: 0 2em;
  overflow: auto;
  order: 0;
  flex: 6;
  height: auto;
}

.content__title {
  padding: 0 2em;
  margin-bottom: 16px;
}

.content__toolbar {
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
}

.content__toolbar-primary-button {
  min-width: 240px;
  font-weight: 600;
}

.content__sidebar {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  /* background-color: yellow; */
  order: 1;
  flex: 2;
  min-width: 350px;
}

.content {
  width: 100%;
  display: flex;
  flex-direction: row;
  order: 0;
}

.content__foot {
  padding: 0 2em;
  height: 100px;
  border-top: 1px solid #DFE4E9;
  margin-top: 20px;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
}

.content__foot_item {
  text-align: center;
}

.content__foot_item button {
  margin: 0 20px;
}

@media all and (max-width: 640px) {
  .content {
    flex-direction: column;
    height: 100vh;
  }

  .content__head {
    height: auto;
  }

  .content__wrapper {
    height: auto;
  }

  .content__editor-wrapper {
    height: auto;
  }

  .content__main {
    flex: 1;
    height: auto;
  }

  .content__toolbar {
    height: auto;
  }

  .content__sidebar {
    order: 0;
    flex: 0;
    min-height: 70px;
    margin-top: 12px;
    height: auto;
  }
}

/**
 RIGHT PANEL
 */

.upload-panel {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.upload-panel__footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-left: -24px;
}

/**
SETTINGS
*/

.settings-panel {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
  pointer-events: none;
  visibility: hidden;
  transition: visibility 0.3s;
}

.settings-panel.show {
  pointer-events: auto;
  visibility: visible;
}

.settings-panel__overlay {
  position: absolute;
  top: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  width: 100%;
  height: 100%;
}

.settings-panel__content {
  background-color: white;
  width: auto;
  min-width: 30%;
  height: 100%;
  padding: 1rem;
  border-right: 1px solid #DFE4E9;
  right: -100%;
  position: absolute;
  top: 0;
  transition: right 0.25s ease-in-out;
}

.settings-panel.show .settings-panel__content {
  right: 0;
}

@media all and (max-width: 640px) {
  .settings-panel__content {
    background-color: white;
    width: 75%;
    height: 100%;
    padding: 1rem;
    border-right: 1px solid #DFE4E9;
  }
}

/**
	PHONE NUMBER INPUT



 .react-phone-number-input__input:focus {
 	color: #495057 !important;
 	background-color: #fff !important;
 	border-color: #5ab2ff !important;
 	outline: 0 !important;
 	box-shadow: 0 0 0 0.2rem rgba(0, 116, 217, 0.25) !important;
 }

 .react-phone-number-input__icon {
 	line-height: 0 !important;
 }
 */

/**
	LOADING
	 */

.loading {
  width: 40px;
  fill: #2F4356;
}

/**
 PANEL RESIZE HANDLE
 */

.panel-resize-handle {
  width: 2px;
  background-color: #DFE4E9;
}
/* ... */

